--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Great Giphy App 1.1.0</title>
+    <title>The Great Giphy App 1.2.0</title>
+    <link rel="icon" class="appImg" href="">
 </head>
 
 <body>
